@@ -20,7 +20,6 @@ public class Config {
     public static final String CATEGORY_GENERAL = "general";
 
     public static final String[] DEFAULT_ASSETS = new String[] {
-            "/assets/lostcities/citydata/variants.json",
             "/assets/lostcities/citydata/library.json",
             "$lostcities/userassets.json"
     };
