@@ -1,10 +1,10 @@
 package mcjty.lostcities.worldgen.lost.cityassets;
 
-import com.google.gson.JsonArray;
-import com.google.gson.JsonElement;
 import com.google.gson.JsonObject;
 import mcjty.lostcities.api.ILostCityAsset;
 import mcjty.lostcities.varia.Tools;
+import mcjty.lostcities.worldgen.lost.regassets.VariantRE;
+import mcjty.lostcities.worldgen.lost.regassets.data.BlockEntry;
 import net.minecraft.world.level.block.state.BlockState;
 import org.apache.commons.lang3.tuple.Pair;
 
@@ -19,15 +19,12 @@ public class Variant implements ILostCityAsset {
     private String name;
     private final List<Pair<Integer, BlockState>> blocks = new ArrayList<>();
 
-    public Variant() {
-    }
-
-    public Variant(JsonObject object) {
-        readFromJSon(object);
-    }
-
-    public Variant(String name) {
-        this.name = name;
+    public Variant(VariantRE object) {
+        name = object.getRegistryName().getPath(); // @todo temporary. Needs to be fully qualified
+        for (BlockEntry entry : object.getBlocks()) {
+            BlockState state = Tools.stringToState(entry.block());
+            blocks.add(Pair.of(entry.random(), state));
+        }
     }
 
     @Override
@@ -41,18 +38,5 @@ public class Variant implements ILostCityAsset {
 
     @Override
     public void readFromJSon(JsonObject object) {
-        name = object.get("name").getAsString();
-        JsonArray blocksArray = object.get("blocks").getAsJsonArray();
-        parseBlockArray(blocksArray);
-    }
-
-    public void parseBlockArray(JsonArray array) {
-        for (JsonElement el : array) {
-            JsonObject ob = el.getAsJsonObject();
-            Integer f = ob.get("random").getAsInt();
-            String block = ob.get("block").getAsString();
-            BlockState state = Tools.stringToState(block);
-            blocks.add(Pair.of(f, state));
-        }
     }
 }
