@@ -1,0 +1,12 @@
+{
+  "blocks": [
+    {
+      "random": 32,
+      "block": "minecraft:cracked_deepslate_tiles"
+    },
+    {
+      "random": 1000,
+      "block": "minecraft:deepslate_tiles"
+    }
+  ]
+}
