@@ -1,0 +1,16 @@
+{
+  "blocks": [
+    {
+      "random": 32,
+      "block": "minecraft:cracked_stone_bricks"
+    },
+    {
+      "random": 32,
+      "block": "minecraft:stone_bricks"
+    },
+    {
+      "random": 1000,
+      "block": "minecraft:stone"
+    }
+  ]
+}
