@@ -1,0 +1,16 @@
+{
+  "blocks": [
+    {
+      "random": 9,
+      "block": "minecraft:stonebrick@2"
+    },
+    {
+      "random": 8,
+      "block": "minecraft:stonebrick@1"
+    },
+    {
+      "random": 1000,
+      "block": "minecraft:stonebrick"
+    }
+  ]
+}
