@@ -7,6 +7,8 @@ Upcoming:
 - New feature where you can specify rubble blocks for a building. These will be used instead of the filler block but only for when buildings are damaged and spill over in adjacent chunks
 - New 'variant' asset type where you can define sets of blocks that can then be used in palettes. This makes defining different palettes easier
 
+@TODO: Fix glass panes not updating state correctly
+
 1.18-5.2.6:
 - New system to control city rarity based on perlin maps. If the cityChance setting is -1 then cityPerlinScale and cityPerlinOffset will be used for a more natural city style
 - New 'cityStyleThreshold' and 'cityStyleAlternative' that can be used to select another city style for low city thresholds
